Fix introImg overflowing into about section

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -64,7 +64,7 @@
 .introImg {
     position: absolute;
     z-index: -1;
-    top: 0;
+    top: -5rem;
     right: 0;
     object-fit: cover; /* since in mobile itll be a bg */
     height: 100vh;
